# line-follower-robot

./: README.md
firmware/: CMakeLists.txt  LFR_Pico2.cpp
